screenshots for readme

--- a/webtool/templates/fuzzy_search.html
+++ b/webtool/templates/fuzzy_search.html
@@ -186,12 +186,19 @@
         </div>
     </div>
 
+    <hr>
 
     <div class="container-fluid">
-        <table id="fuzzy_address_table" class="table table-striped" width="100%">
-            <thead></thead>
-            <tbody></tbody>
-        </table>
+        <div class="row">
+            <div class="col-lg-2"></div>
+            <div class="col-lg-8">
+                <table id="fuzzy_address_table" class="table table-striped" width="100%">
+                    <thead></thead>
+                    <tbody></tbody>
+                </table>
+            </div>
+            <div class="col-lg-2"></div>
+        </div>
     </div>
 
 
